# effimemo

./: .coverage  .gitignore  .pre-commit-config.yaml  MANIFEST.in  PKG-INFO  README.md  README_CN.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  manual-publish.yml  publish-to-pypi.yml
effimemo/: __init__.py  manager.py
effimemo.egg-info/: PKG-INFO  SOURCES.txt
effimemo/adapters/: openai.py
effimemo/core/: tokenizer.py
effimemo/strategies/: __init__.py  base.py  compression.py  summary.py  truncation.py
tests/: test_compression_comparison.py  test_manager.py  test_manager_summary.py  test_messages.json  test_openai_adapter.py  test_quick.py  test_summary_strategy.py  test_tokenizer.py  test_truncation.py
